--- a/public/home/css/common.css
+++ b/public/home/css/common.css
@@ -8,15 +8,12 @@
 
     widht: 100%;
 }
-.visitor p{
-    position: relative;
-    margin-top: 5px;
-    text-indent: 10px;
-}
-.visitor p .pull-right{
-    position: absolute;
-    right: 10px;
-    top: 0;
+.brief{
+    overflow : hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 .content-header > .breadcrumb
 {
@@ -61,4 +58,47 @@
 }
 .female{
     color:#ec95b9;
+}
+div.go-top {
+    display: none;
+    opacity: 0.6;
+    z-index: 999999;
+    position: fixed;
+    bottom: 113px;
+    right: 10%;
+    margin-left: 40px;
+    border: 1px solid #a38a54;
+    width: 38px;
+    height: 38px;
+    background-color: #eddec2;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+div.go-top:hover {
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+
+div.go-top div.arrow {
+    position: absolute;
+    left: 10px;
+    top: -1px;
+    width: 0;
+    height: 0;
+    border: 9px solid transparent;
+    border-bottom-color: #cc3333;
+}
+
+div.go-top div.stick {
+    position: absolute;
+    left: 15px;
+    top: 15px;
+    width: 8px;
+    height: 14px;
+    display: block;
+    background-color: #cc3333;
+    -webkit-border-radius: 1px;
+    -moz-border-radius: 1px;
+    border-radius: 1px;
 }
