--- a/public/home/css/common.css
+++ b/public/home/css/common.css
@@ -59,18 +59,21 @@
 .female{
     color:#ec95b9;
 }
+.content{
+    position: relative;
+}
 div.go-top {
+    position: fixed;
+    bottom: 113px;
+    right: 8%;
     display: none;
     opacity: 0.6;
     z-index: 999999;
-    position: fixed;
-    bottom: 113px;
-    right: 10%;
     margin-left: 40px;
-    border: 1px solid #a38a54;
+    border: 1px solid #3c8dbc;
     width: 38px;
     height: 38px;
-    background-color: #eddec2;
+    background-color: #3c8dbc;
     border-radius: 3px;
     cursor: pointer;
 }
@@ -87,7 +90,7 @@ div.go-top div.arrow {
     width: 0;
     height: 0;
     border: 9px solid transparent;
-    border-bottom-color: #cc3333;
+    border-bottom-color: #fff;
 }
 
 div.go-top div.stick {
@@ -97,7 +100,7 @@ div.go-top div.stick {
     width: 8px;
     height: 14px;
     display: block;
-    background-color: #cc3333;
+    background-color: #fff;
     -webkit-border-radius: 1px;
     -moz-border-radius: 1px;
     border-radius: 1px;
